[FIX] survey: chart issues
Issue 1:
Previously, the chart was being overlapped by the navigation on smaller screen
sizes. This commit fixes the issue and also refactors the fixed position of buttons
to use flex.

Issue 2:
Previously, after a certain amount of data, the bar colors defaulted to black as
the dataIndex exceeded the colors array. This commit fixes the issue by using
the modulo operation on dataIndex with the colors array to repeat the colors,
and also added additional colors referenced from reporting.

Task-4089537

--- a/addons/survey/static/src/scss/survey_templates_form.scss
+++ b/addons/survey/static/src/scss/survey_templates_form.scss
@@ -302,23 +302,16 @@ _::-webkit-full-page-media, _:future, :root .o_survey_wrap {
     }
 
     .o_survey_session_navigation {
-        position: fixed;
         padding: 1rem;
-        top: calc(50% - 0.5rem);
         cursor: pointer;
 
         &.o_survey_session_navigation_next {
-            right: 1rem;
             border: 2px solid #35979c;
             border-radius: 5px;
 
             &:hover {
                 border-color: #2a797c;
             }
-        }
-
-        &.o_survey_session_navigation_previous {
-            left: 1rem;
         }
     }
 
